fix height on safari mobile

--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -2,14 +2,17 @@
 @import ./themes
 @import ./vars
 
+
 html, body
   background: black
   font-family: $fontFamily
   margin: 0
   padding: 0
   color: #FFF
-  width: 100vw
-  height: 100vh
+  height: -webkit-fill-available
+
+body
+  min-height: 100vh
 
 a
   color: inherit
